# manim

./: README.md
manim/: .gitignore  README.md  pyproject.toml
manim/manim_animations/: __init__.py  run.py
manim/manim_animations/scenes/: __init__.py  dot_norm.py  matrix_transforms.py
manim_animations/: run.py
manim_animations/scenes/: __init__.py  vector_intuition.py
